flex/flex-tests/testData/js2_highlighting/MethodCanBeStatic2.js2
package <error descr="Package name 'aaa' does not correspond to file path ''">aaa</error> {
public class <error descr="Class 'A' should be defined in file 'A.js2'">A</error> {
  public function <warning descr="Method can be made 'static'">fo<caret>o</warning>():void { var i : int; }
}
}

<error descr="Package should be first statement in file">package</error> <error descr="Package name 'bbb' does not correspond to file path ''">bbb</error> {
import aaa.A;

public class <error descr="Class 'B' should be defined in file 'B.js2'">B</error> {
  public static function ref1():void {
    var v : A;
    v.foo();
  }
  public static function getA():A {}
}
}

<error descr="Package should be first statement in file">package</error> <error descr="Package name 'ccc' does not correspond to file path ''">ccc</error> {
import bbb.B;

public class <error descr="Class 'C' should be defined in file 'C.js2'">C</error> {
  public static function ref1():void {
    B.getA().foo();
  }
}
}

<error descr="Package should be first statement in file">package</error> <error descr="Package name 'ddd' does not correspond to file path ''">ddd</error> {
import bbb.B;

public class <error descr="Class 'D' should be defined in file 'D.js2'">D</error> {
  public static function ref1():void {
    B.getA().foo();
  }
}
}

<error descr="Package should be first statement in file">package</error> <error descr="Package name 'ddd' does not correspond to file path ''">ddd</error> {

public class <error descr="Class 'A' should be defined in file 'A.js2'">A</error> {
}
}
